see #11924 - see JDK-8157016: add required arguments to build javadoc on Java 9
git-svn-id: http://josm.openstreetmap.de/svn/trunk@11596 0c6e7542-c601-0410-84e7-c038aed88b3b